Added file resources like assets

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 </svg>
                             </div>
                             <div class="project-links">
-                                <a href="SGI/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="project-link">
+                                <a href="assets/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="project-link">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
                                         <circle cx="12" cy="12" r="3"/>
