--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 </svg>
                             </div>
                             <div class="project-links">
-                                <a href="assets/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="project-link">
+                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="project-link">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
                                         <circle cx="12" cy="12" r="3"/>
@@ -57,7 +57,7 @@
                             <span class="tag">Views</span>
                         </div>
                         <div class="project-resources">
-                            <h4>Recursos</h4>
+                            <h4>Sesión de videos</h4>
                             <div class="resource-links">
                                 <a href="https://www.youtube.com/playlist?list=PLf03vPJLEOIWIBSw8-gBftN8FZsCcZZ-a" target="_blank" rel="noopener noreferrer" class="resource-link">
                                     <svg viewBox="0 0 24 24" fill="currentColor">
@@ -65,6 +65,9 @@
                                     </svg>
                                     Playlist Completa
                                 </a>
+                            </div>                                  
+                            <h4>Videos individuales</h4>
+                            <div class="resource-links">
                                 <a href="https://youtu.be/Gul1yTHbNu0" target="_blank" rel="noopener noreferrer" class="resource-link">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <circle cx="12" cy="12" r="10"/>
@@ -78,6 +81,29 @@
                                         <polygon points="10 8 16 12 10 16 10 8"/>
                                     </svg>
                                     Implementación
+                                </a>
+                            </div>
+                            <h4>Diagramas y Recursos</h4>
+                            <div class="resource-links">
+                                <a href="https://github.com/hubetcardenasi/SGI" target="_blank" rel="noopener noreferrer" class="resource-link">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M9 18L15 12L9 6" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
+                                    Repositorio
+                                </a>
+                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="resource-link">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                                        <circle cx="12" cy="12" r="3"/>
+                                    </svg>
+                                    Diagrama Entidad-Relación
+                                </a>
+                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/Diagrama%20de%20base%20de%20datos%20-%20SQL%20Server.png" target="_blank" title="Ver Diagrama BD" class="resource-link">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                                        <circle cx="12" cy="12" r="3"/>
+                                    </svg>
+                                    Diagrama de Base de Datos (SQL Server Management Studio - SSMS)
                                 </a>
                             </div>
                         </div>
