Update presentation name at assets and changed links in index file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 </svg>
                             </div>
                             <div class="project-links">
-                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="project-link">
+                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Presentation/SGI-PyME-Presentacion.pdf" target="_blank" title="Ver Diagrama ER" class="project-link">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
                                         <circle cx="12" cy="12" r="3"/>
@@ -91,6 +91,13 @@
                                     </svg>
                                     Repositorio
                                 </a>
+                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Presentation/SGI-PyME-Presentacion.pdf" target="_blank" title="Ver Diagrama ER" class="resource-link">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                                        <circle cx="12" cy="12" r="3"/>
+                                    </svg>
+                                    Presentación del Proyecto
+                                </a>
                                 <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/ER.png" target="_blank" title="Ver Diagrama ER" class="resource-link">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
@@ -98,7 +105,7 @@
                                     </svg>
                                     Diagrama Entidad-Relación
                                 </a>
-                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/Diagrama%20de%20base%20de%20datos%20-%20SQL%20Server.png" target="_blank" title="Ver Diagrama BD" class="resource-link">
+                                <a href="https://hubetcardenasi.github.io/SGI/assets/PyME/Images/DBD-SSMS.png" target="_blank" title="Ver Diagrama BD" class="resource-link">
                                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
                                         <circle cx="12" cy="12" r="3"/>
